--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,3 +158,18 @@ input {
   @extend .control-group;
   @extend .error;
 }
+
+/* users index */
+.users{
+  list-style: none;
+  margin: 0;
+  li{
+    overflow: auto;
+    padding:10px 0;
+    border-top: 1px solid $lightGray;
+    &:last-child{
+      border-bottom:1px solid $lightGray;
+    }
+  }
+
+}
